# negotiate-mcp

./: .gitignore  CHANGELOG.md  Dockerfile  HOSTED_INSTANCE_SETUP.md  LICENSE  PROTOCOL.md  PUBLISH.md  README.md  breadth_healthcheck.py  claude_desktop_config.example.json  fly.hosted.toml  fly.toml  pyproject.toml
.github/workflows/: tests.yml
negotiate_mcp/: __init__.py  __main__.py  nash_telemetry.py  nash_validation.py  server.json  server.py
tests/: test_annotations.py
